--- a/index.html
+++ b/index.html
@@ -11,23 +11,30 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <nav>
-        <div>No cabeçalho deve conter um botão para expandir o menu</div>
-        <ul>
-            Lista de infos que deve conter no menu
-            <li>Home</li>
-            <li>Cardápio</li>
-            <li>Form de Pedido</li>
-            <li>Infos de Contato</li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+        <div class="container">
+            <a class="navbar-brand text-white" href="#apr-hamburgueria">Hamburgão do Jão</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nvg-menu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div id="nvg-menu" class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="#apr-hamburgueria" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#cardapio" class="nav-link">Cardápio</a></li>
+                <li class="nav-item"><a href="#apr-hamburgueria" class="nav-link">Pedido</a></li>
+                <li class="nav-item"><a href="#contatos" class="nav-link">Contatos</a></li>
+            </ul>
+        </div>
+        </div>
     </nav>
-    <main class="d-flex flex-column justify-content-center p-3">
+    <main id="apr-hamburgueria" class="d-flex flex-column justify-content-center p-3 container">
         <h3 class="nm-hamburgueria">Hamburgão do Jão</h3>
         <p class="dsc-hamburgueria">A nossa hamburgueria conta com receitas que passaram de geração em geração, preservando tradições e o carinho da cozinha de quem faz comida por amor. Nossos sanduíches são feitos com ingredientes frescos e selecionados, para proporcionar uma experiência inesquecível!</p>
         <a class="btn btn-danger mb-1" href="#cardapio">Peça já o seu!</a>
         <img class="img-fluid rounded" src="./images/banner_hamburgueria.jpg" alt="Imagem de um hambúrguer">
     </main>
-    <section id="cardapio" class="d-flex flex-column justify-content-center p-3">
+    <section id="cardapio" class="d-flex flex-column justify-content-center p-3 container">
         <h3 class="tlt-cardapio">Conheça nosso cardápio!</h3>
         <div class="d-flex flex-column justify-content-center mb-3">
             <h5 class="tlt-sanduiche">Abraço de Mainha</h5>
@@ -42,7 +49,7 @@
             <button type="button" class="btn btn-danger w-25">Pedir um</button>
         </div>
     </section>
-    <footer class="d-flex flex-row justify-content-between px-5 mb-2">
+    <footer id="contatos" class="d-flex flex-row justify-content-between px-5 mb-2">
         <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
         <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
