correção do alinhamento dos itens do cardápio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger sticky-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-danger sticky-top">
         <div class="container">
             <a class="navbar-brand text-white" href="#apr-hamburgueria">Hamburgão do Jão</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nvg-menu">
@@ -42,7 +42,7 @@
 
     <section id="cardapio" class="d-flex flex-column justify-content-center p-3 container">
         <h3 class="tlt-cardapio">Conheça nosso cardápio!</h3>
-        <div class="d-flex flex-lg-row flex-sm-column justify-content-between">
+        <div class="d-flex flex-column flex-xl-row justify-content-between">
             <div class="card-sanduiche">
                 <h5 class="tlt-sanduiche">Abraço de Mainha</h5>
                 <img class="img-sanduiche" src="./images/abr_de_mainha.jpg" alt="Imagem do sanduíche abraço de mainha. Pão brioche com gergelim, alface, tomate, dois blends de carne com fatias de queijo cheddar e picles">
